# SAPI-POC

./: .gitignore  README.md
VoiceServer/: README.md  RegisterVoice.py  VoiceServer.py  buildinstaller.iss  pyproject.toml  settings.cfg
VoiceServer/_libs/: pysapittsengine.exp  pysapittsengine.lib
engine/: CMakeLists.txt  dllmain.cpp  engine.cpp  engine.h  pysapittsengine.idl  pysapittsengine.rgs  regvoice.cpp  resource.h  resource.rc.in  slog.h  speak.cpp
voices/: __init__.py  azure_neural.py  dummy.py  voice_server.py
