[project]
name = "voiceserver"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [

    "configparser>=7.1.0",

    "langcodes>=3.4.0",

    "py3-tts-wrapper[google,microsoft,polly,sherpaonnx,watson]>=0.9.12",

    "pyinstaller>=6.10.0",

    "pyside6>=6.7.2",

    "python-dotenv>=1.0.1",

    "pywin32>=306",
]
